--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -43,4 +43,7 @@
     <string name="label_content">Contenu</string>
     <string name="label_tags">Tags</string>
     <string name="label_no_content">Pas de contenu</string>
+
+    <!-- Search -->
+    <string name="search_hint">Rechercher des entrées…</string>
 </resources>
